<resources>
    <string name="app_name">ChitChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to">Welcome To</string>
    <string name="chit_chat">Chit Chat</string>
    <string name="login">Login</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login With Google</string>
    <string name="new_to_chit_chat">New to Chit Chat?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="phone">Phone</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_singing_up_you_re_agree_to_our_terms_and_conditions_and_privacy_policy">By singing up you\'re agree to our <b><font color="#12206F">Terms Conditions</font> </b>\nand<b><font color="#12206F"> Privacy Policy</font></b></string>
    <string name="have_an_account">Have an account?</string>
    <string name="search">Search</string>
    <string name="image">Image</string>
    <string name="message">Message</string>
</resources>