<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login_sign_up.SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/ivLoginAnim"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/sign_up_anim" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:text="@string/sign_up"
            android:textColor="@color/txtColorDarkBlue"
            android:textSize="@dimen/_28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLoginAnim" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFullName"
            android:background="@drawable/edit_text_bg_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="14dp"
            android:inputType="text"
            android:maxLength="20"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/full_name"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:background="@drawable/edit_text_bg_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="14dp"
            android:inputType="number"
            android:maxLength="11"
            android:ems="11"
            android:fontFamily="serif"
            android:hint="@string/phone"
            android:drawableStart="@drawable/baseline_local_phone_24"
            android:drawablePadding="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFullName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailSignUp"
            android:background="@drawable/edit_text_bg_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="14dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/email_id"
            android:drawableStart="@drawable/baseline_alternate_email_24"
            android:drawablePadding="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPhone" />
        <EditText
            android:id="@+id/etUploadImage"
            android:background="@drawable/edit_text_bg_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="14dp"
            android:inputType="none"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/image"
            android:gravity="center_vertical"
            android:clickable="true"
            android:drawablePadding="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmailSignUp"
            app:drawableStartCompat="@drawable/baseline_image_24"
            android:focusable="false" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordFldSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_bg_login"
            app:boxBackgroundMode="none"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUploadImage"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:drawablePadding="@dimen/_10dp"
                android:drawableStart="@drawable/baseline_lock_reset_24"
                android:hint="@string/password"
                android:textSize="18sp"
                android:fontFamily="serif"
                android:inputType="textPassword"
                android:ems="10"
                android:padding="@dimen/_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etConfirmPasswordFldSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_bg_login"
            app:boxBackgroundMode="none"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordFldSignUp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:drawablePadding="@dimen/_10dp"
                android:drawableStart="@drawable/baseline_lock_reset_24"
                android:hint="@string/confirm_password"
                android:textSize="18sp"
                android:fontFamily="serif"
                android:inputType="textPassword"
                android:ems="10"
                android:padding="@dimen/_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/txtTermsAndConditions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/by_singing_up_you_re_agree_to_our_terms_and_conditions_and_privacy_policy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPasswordFldSignUp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_login_bg"
            android:fontFamily="serif"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTermsAndConditions" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/txtHaveAnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/have_an_account" />

            <TextView
                android:id="@+id/tvLoginBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="serif"
                android:text="@string/login"
                android:textColor="@color/txtColorDarkBlue"
                android:textStyle="bold" />
        </LinearLayout>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivUserImage"
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:layout_marginEnd="8dp"
            app:riv_corner_radius="30dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/etUploadImage"
            app:layout_constraintEnd_toEndOf="@+id/etUploadImage"
            app:layout_constraintTop_toTopOf="@+id/etUploadImage"
            tools:src="@tools:sample/avatars" />



        <ProgressBar
            android:id="@+id/progressBar"
            android:backgroundTint="@color/green"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>